# ndjsonlogger

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: entryiter.rs  entryvaluebuilder.rs  lib.rs  logfunc.rs  typefns.rs
