[package]
name = "ndjsonlogger"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ndjsonlogger"
homepage = "https://github.com/flickpp/ndjsonlogger"
repository = "https://github.com/flickpp/ndjsonlogger"
readme = "README.md"
keywords = ["log", "logger", "json"]
exclude = [
	"example/*",
]

[lib]
proc-macro = true
